<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.todolister.MainActivity" >

    <item
        android:id="@+id/add_item"
        android:icon="@drawable/add_item1"
        android:showAsAction="always"
        android:title="@string/action_add_item"/>
    <item
        android:id="@+id/priority_view"
        android:icon="@drawable/priority_views1"
        android:showAsAction="always"
        android:title="@string/action_priority_view"/>
    <item
        android:id="@+id/completed_view"
        android:icon="@drawable/completed_view1"
        android:showAsAction="always"
        android:title="@string/action_completed_view"/>
    <item
        android:id="@+id/help"
        android:icon="@drawable/helps1"
        android:showAsAction="always"
        android:title="@string/help"/>
    <item
        android:id="@+id/refresh"
        android:icon="@drawable/refresing1"
        android:showAsAction="always"
        android:title="@string/action_refresh"/>

</menu>